--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
-      <button slot="ar-button" id="ar-button">
-          View in your space
-      </button>
+    <button slot="ar-button" style="background-color: rgb(190, 189, 189); border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
+        👋 Activate AR</button>
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
       </div>
