--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link type="text/css" href="./styles.css" rel="stylesheet"/>
   </head>
   <body>
+
+    <h1>Welcome to Dot Art AR</h1>
+    <hr>
+    <h2>Enlightenment</h2>
     <!-- <model-viewer> HTML element -->
     <model-viewer src="Enlightenmentglb.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.webp" shadow-intensity="1" camera-orbit="-7.211deg 88.04deg 6.736m" field-of-view="43.12deg">
       <div class="progress-bar hide" slot="progress-bar">
