--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <hr>
     <h2>Enlightenment</h2>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="Enlightenmentglb.glb" ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.webp" shadow-intensity="1" camera-orbit="-7.211deg 88.04deg 6.736m" field-of-view="43.12deg">
+    <model-viewer src="Enlightenmentglb.glb" ar="" ar-placement="wall" camera-controls="" touch-action="pan-y" alt="A 3D model of some wall art" ar-status="not-presenting">
       <div class="progress-bar hide" slot="progress-bar">
-          <div class="update-bar"></div>
+        <div class="update-bar" style="width: 100%;"></div>
+      </div>
       </div>
     <button slot="ar-button" style="background-color: rgb(190, 189, 189); border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
         👋 Activate AR</button>
