--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="update-bar" style="width: 100%;"></div>
       </div>
       </div>
-    <button slot="ar-button" style="background-color: rgb(190, 189, 189); border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
+   <button class="btn btn-secondary rounded-pill px-3" type="button" slot="ar-button" style="background-color: rgb(190, 189, 189); border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
         👋 Activate AR</button>
       <div id="ar-prompt">
           <img src="ar_hand_prompt.png">
