--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <h1>Welcome to Dot Art AR</h1>
     <hr>
     <h2>Enlightenment</h2>
+    <img class="scanme" src="DotArtQRCode.PNG" alt="Scan me QR code">
+    <p>Point your camera at the QR code. </p>
+    <p>Tap the AR button that appears on your screen.</p>
+    
     <!-- <model-viewer> HTML element -->
     <model-viewer src="Enlightenmentglb.glb" ar="" ar-placement="wall" camera-controls="" touch-action="pan-y" alt="A 3D model of some wall art" ar-status="not-presenting">
       <div class="progress-bar hide" slot="progress-bar">
