--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <hr>
     <h2>Enlightenment</h2>
     <img class="scanme" src="DotArtQRCode.PNG" alt="Scan me QR code">
-    <p>Point your camera at the QR code. </p>
+    <p>If you are on a PC or laptop, point your camera at the QR code. </p>
     <p>Tap the AR button that appears on your screen.</p>
     
     <!-- <model-viewer> HTML element -->
