--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
 
     <h1>Welcome to Dot Art AR</h1>
+    <a clas="DotArt" href="https://woo-totally-magnetic-blaze.wpcomstaging.com/royal-blood-ar/">DotArt</a>
     <hr>
     <h2>Enlightenment</h2>
     <img class="scanme" src="DotArtQRCode.PNG" alt="Scan me QR code">
