--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <h1>Welcome to Dot Art AR</h1>
-    <a clas="DotArt" href="https://woo-totally-magnetic-blaze.wpcomstaging.com/product/54/">DotArt</a>
+    <a clas="DotArt" href="https://woo-profoundly-winged-crusade.wpcomstaging.com/?post_type=product&p=58&preview=true">DotArt</a>
     <hr>
     <h2>Enlightenment</h2>
     <img class="scanme" src="DotArtQRCode.PNG" alt="Scan me QR code">
