--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
 
-   
+    <h1>Enlightenment</h1>
+    <img src="DotArtQRCode.png" alt="Scan a QR Code">
+   <p>If you are on a PC or laptop, point your camera at the QR code.</p>
+    <p>Tap the AR button that appears on your screen.</p>
+    
 
 
     
