--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" href="./styles.css" rel="stylesheet"/>
   </head>
+  <style>
+        h1, h2{
+            text-align: center;
+            line-height: 2;
+        }
+    </style>
+  
   <body>
 
     <h1>Enlightenment</h1>
