--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <h1>Enlightenment</h1>
-    <img src="DotArtQRCode.PNG" alt="Scan a QR Code">
+    <a img src="DotArtQRCode.PNG" alt="Scan a QR Code">
    <p>If you are on a PC or laptop, point your camera at the QR code.</p>
     <p>Tap the AR button that appears on your screen.</p>
 
